Text Component -- Headline, Subheadline, and Eyebrow with urls ALWAYS get chevron-right after text

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -9,7 +9,7 @@
     vspacing="large"
     util="display-block, display-none@lg, hover:height-full"
     tag="h2"
-    font-family="headline"\
+    font-family="headline"
     icon-name="download"
     icon-background="circle"
     icon-size="medium"
@@ -20,3 +20,10 @@
 >
   My awesome bolt - text component yo!
 </bolt-text>
+<bolt-text url="http://google.com" eyebrow>Here is an eyebrow</bolt-text>
+<bolt-text url="http://google.com" headline>Here is an awesome headline</bolt-text>
+<bolt-text url="http://google.com" vspacing="large" subheadline>This below is a subheadline</bolt-text>
+
+<bolt-text eyebrow>Here is an eyebrow</bolt-text>
+<bolt-text headline>Here is an awesome headline</bolt-text>
+<bolt-text subheadline>This below is a subheadline</bolt-text>
