Text Component -- icons: added missing "hang" option that clears up issues with relying on parent display setting

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -274,39 +274,51 @@ h1, h2, h3, h4, h5, h6, p {
 
   // Icon Alignment
   &.has-icon:not(.has-url) {
-    &.c-bolt-text--display-inline {
-      display: inline-flex;
-    }
-    &.c-bolt-text--display-inline-block,
-    &.c-bolt-text--display-block {
+
+    &.c-bolt-text--icon-align-left-hang,
+    &.c-bolt-text--icon-align-right-hang {
       display: flex;
       justify-content: space-between;
     }
-    &.c-bolt-text--icon-align-before bolt-icon {
-      margin-right: 0.25rem;
+    &.c-bolt-text--icon-align-left,
+    &.c-bolt-text--icon-align-left-hang {
+      bolt-icon {
+        margin-right: 0.25rem;
+      }
     }
-    &.c-bolt-text--icon-align-after bolt-icon {
-      margin-left: 0.25rem;
+    &.c-bolt-text--icon-align-right,
+    &.c-bolt-text--icon-align-right-hang  {
+      bolt-icon {
+        margin-left: 0.25rem;
+      }
     }
   }
   &.has-icon.has-url { // If we have an <a> tag we need that to be the flex parent
-    &.c-bolt-text--display-inline > a {
-      display: inline-flex;
+
+    &.c-bolt-text--icon-align-left-hang,
+    &.c-bolt-text--icon-align-right-hang {
+      > a {
+        display: flex;
+        justify-content: space-between;
+      }
     }
-    &.c-bolt-text--display-inline-block > a,
-    &.c-bolt-text--display-block > a {
-      display: flex;
-      justify-content: space-between;
+    &.c-bolt-text--icon-align-left,
+    &.c-bolt-text--icon-align-left-hang {
+      > a bolt-icon {
+        margin-right: 0.25rem;
+      }
     }
-    &.c-bolt-text--icon-align-before > a bolt-icon {
-      margin-right: 0.25rem;
-    }
-    &.c-bolt-text--icon-align-after > a bolt-icon {
-      margin-left: 0.25rem;
+    &.c-bolt-text--icon-align-right,
+    &.c-bolt-text--icon-align-right-hang {
+      > a bolt-icon {
+        margin-left: 0.25rem;
+      }
     }
   }
+
   &--vertical-align-top.has-icon {
     bolt-icon {
+      margin-top: bolt-strip-unit( (bolt-v-spacing(medium) / 6.5) ) + em;
       vertical-align: top;
     }
   }
