--- a/packages/components/bolt-unordered-list/src/unordered-list.twig
+++ b/packages/components/bolt-unordered-list/src/unordered-list.twig
@@ -43,3 +43,7 @@
     {% endfor %}
   </ul>
 </bolt-{{ componentName }}>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-unordered-list/unordered-list.schema.yml', _self) | raw }}
+{% endif %}
