--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -317,8 +317,24 @@ h1, h2, h3, h4, h5, h6, p {
   }
 
   &--vertical-align-top.has-icon {
+    &.c-bolt-text--font-xxxlarge bolt-icon {
+      margin-top: 0.13em;
+    }
+    &.c-bolt-text--font-xxlarge bolt-icon {
+      margin-top: 0.19em;
+    }
+    &.c-bolt-text--font-xlarge bolt-icon {
+      margin-top: 0.225em;
+    }
+    &.c-bolt-text--font-large bolt-icon {
+      margin-top: 0.25em;
+    }
+    &.c-bolt-text--font-medium bolt-icon,
+    &.c-bolt-text--font-small bolt-icon,
+    &.c-bolt-text--font-xsmall bolt-icon {
+      margin-top: 0.32em;
+    }
     bolt-icon {
-      margin-top: bolt-strip-unit( (bolt-v-spacing(medium) / 6.5) ) + em;
       vertical-align: top;
     }
   }
