Text Component -- added link color and text-decoration rules

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -15,15 +15,12 @@
     icon-size="medium"
     icon-color="blue"
     icon-valign="center"
-    icon-align="after"
+    icon-align="right"
     url="http://google.com"
 >
   My awesome bolt - text component yo!
 </bolt-text>
-<bolt-text url="http://google.com" eyebrow>Here is an eyebrow</bolt-text>
-<bolt-text url="http://google.com" headline>Here is an awesome headline</bolt-text>
-<bolt-text url="http://google.com" vspacing="large" subheadline>This below is a subheadline</bolt-text>
 
 <bolt-text eyebrow>Here is an eyebrow</bolt-text>
-<bolt-text headline>Here is an awesome headline</bolt-text>
-<bolt-text subheadline>This below is a subheadline</bolt-text>
+<bolt-text url="http://google.com" headline>Here is an awesome headline</bolt-text>
+<bolt-text url="http://google.com" vspacing="large" subheadline>This below is a subheadline</bolt-text>
