--- a/packages/components/bolt-teaser/src/teaser.twig
+++ b/packages/components/bolt-teaser/src/teaser.twig
@@ -19,7 +19,7 @@
   {% for item in contentItems if item.pattern %}
     {% include pattern_template(item.pattern) with item only %}
   {% endfor %}
-  
+
   {% if content %}
     {% include "@bolt/text.twig" with {
       text: content | striptags('<a>'),
@@ -36,3 +36,7 @@
   } only %}
 {% endif %}
 </bolt-teaser>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-teaser/teaser.schema.yml', _self) | raw }}
+{% endif %}
