--- a/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
@@ -1,6 +1,4 @@
-{% set schema = get_data('@bolt-components-block-list/block-list.schema.yml') %}
-
-{% for theme in schema.properties.theme.enum %}
+{% for theme in ["xlight", "light", "medium", "dark", "xdark"] %}
   <p>Theme: {{ theme }}</p>
   {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
