--- a/packages/components/bolt-background/src/background.twig
+++ b/packages/components/bolt-background/src/background.twig
@@ -66,7 +66,7 @@
         <div {{ overlayAttributes.addClass(overlayClasses) }} ></div>
       {% endif %}
 
-      {% if shapeGroup is not same as('none') %}
+      {% if shapeGroup != 'none' %}
         <div {{ shapeAttributes.addClass(shapeClasses) }}>
           {% include "@bolt/background-shapes.twig" with { "shapeGroup": shapeGroup } only %}
         </div>
