fix: navbar cleanup, removing link and text dependency

--- a/apps/pattern-lab/src/_patterns/02-components/navbar/25-navbar-linked-title.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/25-navbar-linked-title.twig
@@ -1,10 +1,16 @@
+{% include "@bolt-components-headline/headline.twig" with {
+  "size": "large",
+  "text": "Activate linked title by passing in an url"
+} only %}
+
 {% include "@bolt-components-navbar/navbar.twig" with {
   "title": {
     "tag": "h2",
     "text": "Title Text",
     "icon": {
       "name": "marketing-gray"
-    }
+    },
+    "url": "https://www.google.com"
   },
   "links": [
     {
