--- a/apps/pattern-lab/src/_patterns/02-components/navbar/10-navbar-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/10-navbar-theme-variation.twig
@@ -1,30 +1,37 @@
 {% set schema = bolt.data.components['@bolt-components-navbar'].schema %}
 
 {% for theme in schema.properties.theme.enum %}
-  <p>Theme: {{ theme }}</p>
-  {% include "@bolt-components-navbar/navbar.twig" with {
-    "theme": theme,
-    "title": {
-      "tag": "h2",
-      "text": "Title Text",
-      "icon": {
-        "name": "marketing-gray"
-      }
-    },
-    "links": [
-      {
-        "text": "Link 1 Text",
-        "url": "link-1-url"
+  {% set headline %}
+    Theme: {{ theme }}
+  {% endset %}
+  {% include "@bolt-components-headline/headline.twig" with {
+    "size": "large",
+    "text": headline
+  } only %}
+  <div class="u-bolt-margin-bottom-large">
+    {% include "@bolt-components-navbar/navbar.twig" with {
+      "theme": theme,
+      "title": {
+        "tag": "h2",
+        "text": "Title Text",
+        "icon": {
+          "name": "marketing-gray"
+        }
       },
-      {
-        "text": "Link 2 Text",
-        "url": "link-2-url"
-      },
-      {
-        "text": "Link 3 Text",
-        "url": "link-3-url"
-      }
-    ]
-  } %}
-
+      "links": [
+        {
+          "text": "Link 1 Text",
+          "url": "javascript:"
+        },
+        {
+          "text": "Link 2 Text",
+          "url": "javascript:"
+        },
+        {
+          "text": "Link 3 Text",
+          "url": "javascript:"
+        }
+      ]
+    } %}
+  </div>
 {% endfor %}
