--- a/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
@@ -1,4 +1,11 @@
+{% include "@bolt-components-headline/headline.twig" with {
+  "size": "large",
+  "text": "Remove theme and gradient for a transparent option"
+} only %}
+
 {% include "@bolt-components-navbar/navbar.twig" with {
+  "theme": "false",
+  "gradient": "false",
   "title": {
     "tag": "h2",
     "text": "Title Text",
@@ -10,15 +17,15 @@
   "links": [
     {
       "text": "Link 1 Text",
-      "url": "link-1-url"
+      "url": "javascript:"
     },
     {
       "text": "Link 2 Text",
-      "url": "link-2-url"
+      "url": "javascript:"
     },
     {
       "text": "Link 3 Text",
-      "url": "link-3-url"
+      "url": "javascript:"
     }
   ]
 } %}
