--- a/apps/pattern-lab/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
@@ -1,6 +1,4 @@
-{% set schema = bolt.data.components['@bolt-components-ordered-list'].schema %}
-
-{% for theme in schema.properties.theme.enum %}
+{% for theme in ["xlight", "light", "dark", "xdark", "medium"] %}
   <p>Theme: {{ theme }}</p>
   {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
