Text Component -- added missing link styles for children of div, span, and cite

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -58,7 +58,7 @@ $bolt-headline--minus-letter-spacing: -0.025rem;
 $bolt-headline--plus-letter-spacing: 0.05rem;
 
 // Reset elements
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, div, span, cite, p {
   &.c-bolt-text {
     margin: 0;
     padding: 0;
