--- a/packages/components/bolt-critical-fonts/src/critical-fonts.scss
+++ b/packages/components/bolt-critical-fonts/src/critical-fonts.scss
@@ -1,6 +1,6 @@
-@import '@bolt/core';
-@import '@bolt/global/styles/03-generic/_generic-font-stacks';
-@import '@bolt/global/styles/04-elements/_elements-headings';
-@import '@bolt/global/styles/04-elements/_elements-page';
-@import '@bolt/global/styles/04-elements/_elements-page';
-@import '@bolt/components-headline';
+@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/global/styles/03-generic/_generic-font-stacks';
+@import '~@bolt/global/styles/04-elements/_elements-headings';
+@import '~@bolt/global/styles/04-elements/_elements-page';
+@import '~@bolt/global/styles/04-elements/_elements-page';
+@import '~@bolt/components-headline/src/headline.scss';
