--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -2,7 +2,7 @@
    Forms
 \* ------------------------------------ */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 
 // Mobile Safari will zoom in when input is focused if the text is not at least 16px.
