--- a/packages/components/bolt-sticky/src/sticky.scss
+++ b/packages/components/bolt-sticky/src/sticky.scss
@@ -2,7 +2,7 @@
    Sticky
 \* ------------------------------------ */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 bolt-sticky {
   display: block;
