--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -1,6 +1,6 @@
-@import '@bolt/core';
-@import '@bolt/components-button/src/button.settings';
-@import '@bolt/components-button/src/button.mixins';
+@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/components-button/src/button.settings';
+@import '~@bolt/components-button/src/button.mixins';
 
 @import 'videojs-enhancements';
 
