--- a/packages/global/styles/07-utilities/_utilities-opacity.scss
+++ b/packages/global/styles/07-utilities/_utilities-opacity.scss
@@ -2,7 +2,7 @@
   #VISUALLY HIDDEN UTILITIES
 \* ------------------------------------ */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 $bolt-opacity-props: (0, .25, .50, .75, 1);
 
