--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -1,7 +1,9 @@
 // PL only styles
-@import "@bolt/core";
-@import "../_patterns/**/*.scss";
-@import "*.scss";
+@import '~@bolt/core/styles/index.scss';
+@import '../_patterns/01-styleguide/05-color-palette/_color-swatch.scss';
+@import '../_patterns/01-styleguide/25-breakpoints/_breakpoints.scss';
+@import '../_patterns/04-pages/80-events/_event-sponsors-with-action-block.scss';
+@import '_docs.scss';
 
 bolt-demo {
   display: block;
