--- a/packages/components/bolt-breadcrumb/src/breadcrumb.scss
+++ b/packages/components/bolt-breadcrumb/src/breadcrumb.scss
@@ -2,7 +2,7 @@
    Breadcrumb
 \* ------------------------------------ */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 // Custom element default styles
 bolt-breadcrumb {
