--- a/packages/components/bolt-device-viewer/src/device-viewer.scss
+++ b/packages/components/bolt-device-viewer/src/device-viewer.scss
@@ -1,4 +1,4 @@
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 @import 'device-viewer--iphone8';
 @import 'device-viewer--ipad';
