--- a/packages/components/bolt-nav/nav.scss
+++ b/packages/components/bolt-nav/nav.scss
@@ -2,7 +2,7 @@
    Nav
 \* ------------------------------------ */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 $bolt-nav-link-border-color: var(--bolt-theme-text, currentColor);
 $bolt-nav-link-border-size: 2px;
