--- a/packages/components/bolt-ordered-list/ordered-list.scss
+++ b/packages/components/bolt-ordered-list/ordered-list.scss
@@ -17,7 +17,7 @@
 //   </ol>
 // </bolt-ordered-list>
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 // Local Variables
 $bolt-ordered-list-bullet-size: $bolt-line-height--xsmall + rem;
