--- a/packages/components/bolt-tooltip/src/tooltip.scss
+++ b/packages/components/bolt-tooltip/src/tooltip.scss
@@ -1,7 +1,7 @@
 /* ------------------------------------ *\
    Tooltip
 \* ------------------------------------ */
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 $bolt-tooltip-bubble-triangle-width: 8px;
 $bolt-tooltip-bubble-border-color: bolt-color(gray, light);
