--- a/packages/global/styles/05-objects/objects-ratio/ratio.scss
+++ b/packages/global/styles/05-objects/objects-ratio/ratio.scss
@@ -2,7 +2,7 @@
    #BOLT RATIO OBJECT
    ========================================================================== */
 
-@import '@bolt/core';
+@import '~@bolt/core/styles/index.scss';
 
 .o-#{$bolt-namespace}-ratio,
 #{$bolt-namespace}-ratio {
