--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.twig
@@ -25,7 +25,7 @@
 
 <bolt-copy-to-clipboard bolt-component>
   <div class="{{ "#{baseClass}" }} js-bolt-copy-to-clipboard" {{ attributes.addClass(classes) }}>
-    <span class="{{ "#{baseClass}--default" }}">
+    <span class="{{ "#{baseClass}__trigger" }}">
       {% include "@bolt-components-link/link.twig" with {
         "text": text,
         "url": url,
@@ -34,7 +34,7 @@
           "position": "before",
           "size": iconSize
         },
-        "attributes": attributes.setAttribute("data-clipboard-text", url).setAttribute("target", "_blank").addClass("js-bolt-copy-to-clipboard--default")
+        "attributes": attributes.setAttribute("data-clipboard-text", url).setAttribute("target", "_blank").addClass("js-bolt-copy-to-clipboard__trigger")
       } only %}
     </span>
 
@@ -48,7 +48,7 @@
       }
     } only %}
 
-    <span class="{{ "#{baseClass}--copied" }}">
+    <span class="{{ "#{baseClass}__confirmation" }}">
       {% include "@bolt-components-link/link.twig" with {
         "text": copiedText,
         "url": url,
@@ -60,7 +60,7 @@
         "attributes": {
           "class": [
             "u-bolt-color-teal-dark",
-            "js-bolt-copy-to-clipboard--default"
+            "js-bolt-copy-to-clipboard__trigger"
           ]
         }
       } only %}
