--- a/packages/components/bolt-form/src/elements/form-fieldset.twig
+++ b/packages/components/bolt-form/src/elements/form-fieldset.twig
@@ -42,3 +42,7 @@ Available variables:
 
   </div>
 </fieldset>
+
+{% if enable_json_schema_validation %}
+{{ validate_data_schema(bolt.data.components['@bolt-components-form'].schema.properties['form-fieldset'], _self) | raw }}
+{% endif %}
