--- a/packages/components/bolt-form/src/inputs/form-button.twig
+++ b/packages/components/bolt-form/src/inputs/form-button.twig
@@ -29,3 +29,7 @@
 
   {{ text }}
 </button>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-form'].schema.properties['form-button'], _self) | raw }}
+{% endif %}
