--- a/packages/components/bolt-form/src/inputs/form-input.twig
+++ b/packages/components/bolt-form/src/inputs/form-input.twig
@@ -50,3 +50,7 @@ the icons wrapping markup, even if there are no icons to show, for the following
     } only %}
   </div>
 {% endif %}
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-form'].schema.properties['form-input'], _self) | raw }}
+{% endif %}
