--- a/packages/components/bolt-background-shapes/src/background-shapes.twig
+++ b/packages/components/bolt-background-shapes/src/background-shapes.twig
@@ -98,5 +98,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-background-shapes/background-shapes.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-background-shapes'].schema, _self) | raw }}
 {% endif %}
