--- a/packages/components/bolt-band/src/band.twig
+++ b/packages/components/bolt-band/src/band.twig
@@ -65,5 +65,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-band/band.schema.yml', _self) | raw }}
+  {# {{ validate_data_schema(bolt.data.components['@bolt-components-band'].schema, _self) | raw }} #}
 {% endif %}
