--- a/packages/components/bolt-block-list/src/block-list.twig
+++ b/packages/components/bolt-block-list/src/block-list.twig
@@ -22,5 +22,5 @@
 </bolt-block-list>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-block-list/block-list.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-block-list'].schema, _self) | raw }}
 {% endif %}
