--- a/packages/components/bolt-chip/src/chip.twig
+++ b/packages/components/bolt-chip/src/chip.twig
@@ -38,5 +38,5 @@
 </bolt-chip>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-chip/chip.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-chip'].schema, _self) | raw }}
 {% endif %}
