--- a/packages/components/bolt-device-viewer/src/device-viewer.twig
+++ b/packages/components/bolt-device-viewer/src/device-viewer.twig
@@ -82,5 +82,5 @@
 </bolt-device-viewer>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-device-viewer/device-viewer.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-device-viewer'].schema, _self) | raw }}
 {% endif %}
