--- a/packages/components/bolt-figure/src/figure.twig
+++ b/packages/components/bolt-figure/src/figure.twig
@@ -39,5 +39,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-figure/figure.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-figure'].schema, _self) | raw }}
 {% endif %}
