--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -94,5 +94,5 @@
 </bolt-share>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-share/share.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-share'].schema, _self) | raw }}
 {% endif %}
