--- a/src/_patterns/01-core/02-tools/tools-strip-unit/_tools.strip-unit.scss
+++ b/src/_patterns/01-core/02-tools/tools-strip-unit/_tools.strip-unit.scss
@@ -25,6 +25,6 @@
 @function strip-unit($number) {
   @warn 'PegaKit\'s `strip-unit` function is deprecated and will be removed in v1.0.0 of Bolt. Use the new @bolt-strip-unit function instead.';
 
-  @include bolt-strip-unit($number);
+  @return bolt-strip-unit($number);
 }
 /* stylelint-enable */
